# tox-pin-deps

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
examples/env-pins/: tox.ini
examples/env-pins/requirements/: py27-requirements.txt  py27.txt  py310-requirements.txt  py310.txt  py39-requirements.txt  py39.txt  static.txt
examples/pyproject-toml-pkg/: pyproject.toml  tox.ini
examples/pyproject-toml-pkg/requirements/: py310.txt  py39.txt  static.txt
examples/setup-py-pkg/: setup.py  tox.ini
examples/setup-py-pkg/requirements/: py27.txt  py310.txt  py39.txt  static.txt
src/tox_pin_deps/: __init__.py  common.py  compile.py  loader.py  plugin.py  plugin4.py
tests/integration/: conftest.py  mock_packages.py  test_basic_workflow.py  test_mock_packages.py
tests/integration/examples/pyproj/: exp_lock_3.txt  exp_lock_4.txt  exp_no_lock_3.txt  exp_no_lock_4.txt  exp_pip_compile_3.txt  exp_pip_compile_4.txt  exp_reuse_3.txt  exp_reuse_4.txt  pyproject.toml  tox.ini
tests/integration/examples/skipsdist/: exp_lock_3.txt  exp_lock_4.txt  exp_no_lock_3.txt  exp_no_lock_4.txt  exp_pip_compile_3.txt  exp_pip_compile_4.txt  exp_reuse_3.txt  exp_reuse_4.txt  tox.ini
tests/unit/: conftest.py  test_common.py  test_loader.py  test_plugin.py  test_plugin4.py  tox_mocks.py
