[build-system]
requires = [
    "setuptools >= 40.0.4",
    "wheel >= 0.29.0",
    "setuptools_scm[toml]>=3.4",
]
build-backend = 'setuptools.build_meta'

[project]
name = "tox-pin-deps"
description = "A tox plugin for pinning dependencies."
authors = [
    {name = "Masen Furer", email = "m_github@0x26.net"},
]
dependencies = [
    'tox',
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Software Development :: Testing',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    'Programming Language :: Python',
]
dynamic = ["version", "readme"]

[project.entry-points.tox]
pipenv = "tox_pin_deps.plugin"

[project.urls]
homepage = "https://github.com/masenf/tox-pin-deps"

[tool.setuptools]
platforms = ['unix', 'linux', 'osx', 'cygwin', 'win32']

[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.setuptools_scm]
